version fix 1.8